--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,3 +2,17 @@ html,body,#app{
     width: 100%;
     height: 100%;
 }
+.el-breadcrumb{
+    margin-bottom: 15px;
+}
+.el-pagination{
+    margin: 15px 0;
+    float: right;
+}
+.el-table{
+    margin: 15px 0;
+}
+.el-card{
+    height: calc(100vh - 132px);
+    overflow: scroll!important;
+}
